raiseitnow/force-app/main/default/objects/Bug_Tracking__c/Bug_Tracking__c.object-meta.xml
<CustomObject>
    <label>Bug Tracking</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>S.No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bug Trackings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>