raiseitnow/force-app/main/default/objects/Bug_Tracking__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <label>Assignee</label>
    <length>30</length>
    <type>Text</type>
</CustomField>