raiseitnow/force-app/main/default/objects/Bug_Tracking__c/fields/Azure_Issue_Key__c.field-meta.xml
<CustomField>
    <fullName>Azure_Issue_Key__c</fullName>
    <label>Azure Issue Key</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>