raiseitnow/force-app/main/default/objects/Bug_Tracking__c/fields/Azure_Response__c.field-meta.xml
<CustomField>
    <fullName>Azure_Response__c</fullName>
    <label>Azure Response</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>