raiseitnow/force-app/main/default/objects/Bug_Tracking__c/fields/Bug_Type__c.field-meta.xml
<CustomField>
    <fullName>Bug_Type__c</fullName>
    <label>Bug Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jira</fullName>
            </value>
            <value>
                <fullName>Azure</fullName>
            </value>
            <value>
                <fullName>Service Now</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>