raiseitnow/force-app/main/default/objects/Bug_Tracking__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Bug Trackings</relationshipLabel>
    <relationshipName>Bug_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>