raiseitnow/force-app/main/default/objects/Bug_Tracking__c/fields/Configuration_item__c.field-meta.xml
<CustomField>
    <fullName>Configuration_item__c</fullName>
    <label>Configuration item</label>
    <length>30</length>
    <type>Text</type>
</CustomField>