raiseitnow/force-app/main/default/objects/Bug_Tracking__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <label>Created By</label>
    <length>30</length>
    <type>Text</type>
</CustomField>