raiseitnow/force-app/main/default/objects/Bug_Tracking__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <label>Created Date</label>
    <length>30</length>
    <type>Text</type>
</CustomField>