raiseitnow/force-app/main/default/objects/Bug_Tracking__c/fields/Effort__c.field-meta.xml
<CustomField>
    <fullName>Effort__c</fullName>
    <label>Effort</label>
    <length>30</length>
    <type>Text</type>
</CustomField>