raiseitnow/force-app/main/default/objects/Bug_Tracking__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <length>131071</length>
    <type>Html</type>
</CustomField>