raiseitnow/force-app/main/default/objects/Bug_Tracking__c/fields/External_Ticket_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Ticket_ID__c</fullName>
    <label>External Ticket ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>