raiseitnow/force-app/main/default/objects/Bug_Tracking__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <label>Impact</label>
    <length>30</length>
    <type>Text</type>
</CustomField>