raiseitnow/force-app/main/default/objects/Bug_Tracking__c/fields/Incident_State__c.field-meta.xml
<CustomField>
    <fullName>Incident_State__c</fullName>
    <label>Incident State</label>
    <length>30</length>
    <type>Text</type>
</CustomField>