raiseitnow/force-app/main/default/objects/Bug_Tracking__c/fields/Jira_Issue_Key__c.field-meta.xml
<CustomField>
    <fullName>Jira_Issue_Key__c</fullName>
    <label>Jira Issue Key</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>