raiseitnow/force-app/main/default/objects/Bug_Tracking__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <label>Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>