raiseitnow/force-app/main/default/objects/Bug_Tracking__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Label</label>
    <length>30</length>
    <type>Text</type>
</CustomField>