raiseitnow/force-app/main/default/objects/Bug_Tracking__c/fields/Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date__c</fullName>
    <label>Last Modified Date</label>
    <length>30</length>
    <type>Text</type>
</CustomField>