raiseitnow/force-app/main/default/objects/Bug_Tracking__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <length>20</length>
    <type>Text</type>
</CustomField>