raiseitnow/force-app/main/default/objects/Bug_Tracking__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <length>50</length>
    <type>Text</type>
</CustomField>