raiseitnow/force-app/main/default/objects/Bug_Tracking__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <length>30</length>
    <type>Text</type>
</CustomField>