raiseitnow/force-app/main/default/objects/Bug_Tracking__c/fields/Reporter__c.field-meta.xml
<CustomField>
    <fullName>Reporter__c</fullName>
    <label>Reporter</label>
    <length>20</length>
    <type>Text</type>
</CustomField>