raiseitnow/force-app/main/default/objects/Bug_Tracking__c/fields/Service_Template__c.field-meta.xml
<CustomField>
    <fullName>Service_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Template</label>
    <referenceTo>Service_Template__c</referenceTo>
    <relationshipLabel>Bug Trackings</relationshipLabel>
    <relationshipName>Bug_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>