raiseitnow/force-app/main/default/objects/Bug_Tracking__c/fields/ServiceNow_Issue_Key__c.field-meta.xml
<CustomField>
    <fullName>ServiceNow_Issue_Key__c</fullName>
    <label>ServiceNow Issue Key</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>