raiseitnow/force-app/main/default/objects/Bug_Tracking__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <label>Sprint</label>
    <length>30</length>
    <type>Text</type>
</CustomField>