raiseitnow/force-app/main/default/objects/Bug_Tracking__c/fields/Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Subcategory__c</fullName>
    <label>Subcategory</label>
    <length>30</length>
    <type>Text</type>
</CustomField>