raiseitnow/force-app/main/default/objects/Bug_Tracking__c/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <label>Id</label>
    <length>35</length>
    <type>Text</type>
</CustomField>