raiseitnow/force-app/main/default/objects/Bug_Tracking__c/fields/Urgency__c.field-meta.xml
<CustomField>
    <fullName>Urgency__c</fullName>
    <label>Urgency</label>
    <length>30</length>
    <type>Text</type>
</CustomField>