raiseitnow/force-app/main/default/objects/Bug_Tracking__c/fields/Work_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_Type__c</fullName>
    <label>Work Item Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>