raiseitnow/force-app/main/default/objects/Bug_Tracking__c/recordTypes/Azure.recordType-meta.xml
<RecordType>
    <fullName>Azure</fullName>
    <active>true</active>
    <label>Azure</label>
</RecordType>