raiseitnow/force-app/main/default/objects/Bug_Tracking__c/recordTypes/Jira.recordType-meta.xml
<RecordType>
    <fullName>Jira</fullName>
    <active>true</active>
    <label>Jira</label>
</RecordType>