raiseitnow/force-app/main/default/objects/Bug_Tracking__c/recordTypes/Service_Now.recordType-meta.xml
<RecordType>
    <fullName>Service_Now</fullName>
    <active>true</active>
    <label>Service Now</label>
</RecordType>