raiseitnow/force-app/main/default/objects/Bug_Tracking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bug_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Project__c</columns>
    <columns>Service_Template__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>