raiseitnow/force-app/main/default/objects/Bug_Tracking__c/listViews/Azure_Work_items.listView-meta.xml
<ListView>
    <fullName>Azure_Work_items</fullName>
    <columns>NAME</columns>
    <columns>Bug_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Project__c</columns>
    <columns>Service_Template__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Bug_Type__c</field>
        <operation>equals</operation>
        <value>Azure</value>
    </filters>
    <label>Azure Work items</label>
</ListView>