raiseitnow/force-app/main/default/objects/Bug_Tracking__c/listViews/Jira_Issues.listView-meta.xml
<ListView>
    <fullName>Jira_Issues</fullName>
    <columns>NAME</columns>
    <columns>Bug_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Project__c</columns>
    <columns>Service_Template__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Bug_Type__c</field>
        <operation>equals</operation>
        <value>Jira</value>
    </filters>
    <label>Jira Issues</label>
</ListView>