raiseitnow/force-app/main/default/objects/Bug_Tracking__c/listViews/Service_Now_Incidents.listView-meta.xml
<ListView>
    <fullName>Service_Now_Incidents</fullName>
    <columns>NAME</columns>
    <columns>Bug_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Project__c</columns>
    <columns>Service_Template__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Bug_Type__c</field>
        <operation>equals</operation>
        <value>Service Now</value>
    </filters>
    <label>Service Now Incidents</label>
</ListView>