raiseitnow/force-app/main/default/objects/Bug_Tracking__c/listViews/Test.listView-meta.xml
<ListView>
    <fullName>Test</fullName>
    <columns>NAME</columns>
    <columns>Bug_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Project__c</columns>
    <columns>Service_Template__c</columns>
    <filterScope>Mine</filterScope>
    <label>Test</label>
</ListView>